src/test/ui/rfc1598-generic-associated-types/shadowing.stderr
error[E0403]: the name `T` is already used for a generic parameter in this item's generic parameters
  --> $DIR/shadowing.rs:19:14
   |
LL | trait ShadowT<T> {
   |               - first use of `T`
LL |     type Bar<T>;
   |              ^ already used

error[E0403]: the name `T` is already used for a generic parameter in this item's generic parameters
  --> $DIR/shadowing.rs:27:14
   |
LL | impl<T> NoShadowT<T> for Option<T> {
   |      - first use of `T`
LL |     type Bar<T> = i32;
   |              ^ already used

warning: lifetime parameter `'a` never used
  --> $DIR/shadowing.rs:6:14
   |
LL |     type Bar<'a>;
   |             -^^- help: elide the unused lifetime
   |
   = note: `#[warn(unused_lifetimes)]` on by default

warning: lifetime parameter `'a` never used
  --> $DIR/shadowing.rs:4:14
   |
LL | trait Shadow<'a> {
   |             -^^- help: elide the unused lifetime

warning: lifetime parameter `'b` never used
  --> $DIR/shadowing.rs:10:14
   |
LL |     type Bar<'b>; // OK
   |             -^^- help: elide the unused lifetime

warning: lifetime parameter `'a` never used
  --> $DIR/shadowing.rs:9:16
   |
LL | trait NoShadow<'a> {
   |               -^^- help: elide the unused lifetime

warning: lifetime parameter `'a` never used
  --> $DIR/shadowing.rs:15:14
   |
LL |     type Bar<'a> = i32;
   |             -^^- help: elide the unused lifetime

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0403`.
